<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [<!ENTITY storagedir "Live Notes Scores">]>

<resources>
    <string name="app_name">Live Notes</string>

    <string name="time_dialog_title">Set Time Signature and Tempo</string>
    <string name="time_signature">Time Signature</string>
    <string name="simple">Simple</string>
    <string name="compound">Compound</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="tempo">Tempo</string>
    <string name="ok">OK</string>

    <string name="precision_dialog_title">Set Precision</string>
    <string name="shortest_note_to_recognize">Shortest note to recognize:</string>
    <string name="thirty_second">32nd</string>
    <string name="sixteenth">Sixteenth</string>
    <string name="eighth">Eighth</string>
    <string name="quarter">Quarter</string>

    <string name="key_sig_dialog_title">Set Key Signature</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>

    <string name="start_playing_or_long_press">Start playing now or long press to start recording</string>
    <string name="start_description">Long press to start recording</string>
    <string name="stop_description">Long press to stop recording</string>
    <string name="save_description">Long press to save score to a file</string>
    <string name="reset_description">Long press to reset to a new score</string>
    <string name="saved_reset">Saved. Long press to reset to a new score</string>

    <string name="save_musicxml_file">Save MusicXML File</string>
    <string name="storage_dir">&storagedir;</string>
    <string name="save_score_as">Save this score as \"/&storagedir;/%1$s\"?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving">Error saving file</string>
</resources>
